# cpp_oracle_interface

./: CMakeLists.txt  README.md  baza.cpp  baza.hpp  main.cpp
